charts/kubezero-istio-gateway/tests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "httpbin.example.com"
  gateways:
  - istio-ingress/ingressgateway
  http:
  - route:
    - destination:
        port:
          number: 8000
        host: httpbin
